[project]
name = "dx_basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib>=3.9.2",
    "numpy>=2.0.2",
    "scikit-learn>=1.5.2",
    "shap>=0.46.0",
    "tabulate>=0.9.0",
    "toml>=0.10.2",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm>=4.67.0",
    "ultralytics>=8.3.23",
]
